add convenience APIs and update openapi config
